Provide both qt4 and qt5 variants if qt4 or qt5 present

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ find_package(Rock)
 set(CMAKE_CXX_STANDARD_REQUIRED 11)
 set(ROCK_TEST_ENABLED ON)
 rock_init()
-rock_find_qt5(PrintSupport)
-rock_find_qt4()
+rock_feature(NOCURDIR)
+rock_find_qt5(OPTIONAL PrintSupport)
+rock_find_qt4(OPTIONAL)
 rock_standard_layout()
 
