Move WITH_PORTS option to top-level so it is more visible
And also so it is clear that it is used at more places than just src,
coming up in test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,8 @@ set(ROCK_TEST_ENABLED ON)
 
 rock_init()
 rock_find_qt4()
+
+option(WITH_PORTS "Build with rock port support" ON)
+
 rock_standard_layout()
 
