Test the various library/app combinations of ENABLE_DEBUG_DRAWINGS settings

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -38,3 +38,46 @@ rock_executable(draw_test_disabled draw_test_disable.cpp
         vizkit3d_debug_drawings
 )
 target_compile_features(draw_test_disabled PRIVATE cxx_std_11)
+
+rock_library(draw_test_library_enabled draw_test_library.cpp
+    DEPS
+        vizkit3d_debug_drawings-commands
+    )
+target_compile_definitions(draw_test_library_enabled PRIVATE -DENABLE_DEBUG_DRAWINGS)
+target_compile_features(draw_test_library_enabled PRIVATE cxx_std_11)
+
+rock_library(draw_test_library_disabled draw_test_library.cpp
+    DEPS
+        vizkit3d_debug_drawings-commands
+    )
+target_compile_features(draw_test_library_disabled PRIVATE cxx_std_11)
+
+rock_executable(draw_test_lib_enabled_app_enabled draw_test_lib_app.cpp
+    DEPS
+        vizkit3d_debug_drawings
+        draw_test_library_enabled
+)
+target_compile_definitions(draw_test_lib_enabled_app_enabled PRIVATE -DENABLE_DEBUG_DRAWINGS)
+target_compile_features(draw_test_lib_enabled_app_enabled PRIVATE cxx_std_11)
+
+rock_executable(draw_test_lib_disabled_app_enabled draw_test_lib_app.cpp
+    DEPS
+        vizkit3d_debug_drawings
+        draw_test_library_disabled
+)
+target_compile_definitions(draw_test_lib_disabled_app_enabled PRIVATE -DENABLE_DEBUG_DRAWINGS)
+target_compile_features(draw_test_lib_disabled_app_enabled PRIVATE cxx_std_11)
+
+rock_executable(draw_test_lib_disabled_app_disabled draw_test_lib_app.cpp
+    DEPS
+        vizkit3d_debug_drawings
+        draw_test_library_disabled
+)
+target_compile_features(draw_test_lib_disabled_app_disabled PRIVATE cxx_std_11)
+
+rock_executable(draw_test_lib_enabled_app_disabled draw_test_lib_app.cpp
+    DEPS
+        vizkit3d_debug_drawings
+        draw_test_library_enabled
+)
+target_compile_features(draw_test_lib_enabled_app_disabled PRIVATE cxx_std_11)
