Add NOINSTALL tags to test binaries created with ROCK cmake macros

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@
 rock_executable(draw_test_standalone draw_test_standalone.cpp
     DEPS 
         vizkit3d_debug_drawings
+    NOINSTALL
 )
 target_compile_definitions(draw_test_standalone PRIVATE -DENABLE_DEBUG_DRAWINGS)
 target_compile_features(draw_test_standalone PRIVATE cxx_std_11)
@@ -14,6 +15,7 @@ find_package(Boost COMPONENTS serialization iostreams)
 rock_executable(draw_test_attach draw_test_attach.cpp
     DEPS 
         vizkit3d_debug_drawings
+    NOINSTALL
 )
 target_compile_definitions(draw_test_attach PRIVATE -DENABLE_DEBUG_DRAWINGS)
 target_compile_features(draw_test_attach PRIVATE cxx_std_11)
@@ -27,6 +29,7 @@ rock_testsuite(serialization_test
     DEPS_PLAIN
         Boost_SERIALIZATION
         Boost_IOSTREAMS
+    NOINSTALL
 )
 target_compile_definitions(serialization_test PRIVATE -DENABLE_DEBUG_DRAWINGS)
 target_compile_features(serialization_test PRIVATE cxx_std_11)
@@ -36,12 +39,14 @@ target_compile_features(serialization_test PRIVATE cxx_std_11)
 rock_executable(draw_test_disabled draw_test_disable.cpp
     DEPS 
         vizkit3d_debug_drawings
+    NOINSTALL
 )
 target_compile_features(draw_test_disabled PRIVATE cxx_std_11)
 
 rock_library(draw_test_library_enabled draw_test_library.cpp
     DEPS
         vizkit3d_debug_drawings-commands
+    NOINSTALL
     )
 target_compile_definitions(draw_test_library_enabled PRIVATE -DENABLE_DEBUG_DRAWINGS)
 target_compile_features(draw_test_library_enabled PRIVATE cxx_std_11)
@@ -49,6 +54,7 @@ target_compile_features(draw_test_library_enabled PRIVATE cxx_std_11)
 rock_library(draw_test_library_disabled draw_test_library.cpp
     DEPS
         vizkit3d_debug_drawings-commands
+    NOINSTALL
     )
 target_compile_features(draw_test_library_disabled PRIVATE cxx_std_11)
 
@@ -56,6 +62,7 @@ rock_executable(draw_test_lib_enabled_app_enabled draw_test_lib_app.cpp
     DEPS
         vizkit3d_debug_drawings
         draw_test_library_enabled
+    NOINSTALL
 )
 target_compile_definitions(draw_test_lib_enabled_app_enabled PRIVATE -DENABLE_DEBUG_DRAWINGS)
 target_compile_features(draw_test_lib_enabled_app_enabled PRIVATE cxx_std_11)
@@ -64,6 +71,7 @@ rock_executable(draw_test_lib_disabled_app_enabled draw_test_lib_app.cpp
     DEPS
         vizkit3d_debug_drawings
         draw_test_library_disabled
+    NOINSTALL
 )
 target_compile_definitions(draw_test_lib_disabled_app_enabled PRIVATE -DENABLE_DEBUG_DRAWINGS)
 target_compile_features(draw_test_lib_disabled_app_enabled PRIVATE cxx_std_11)
@@ -72,6 +80,7 @@ rock_executable(draw_test_lib_disabled_app_disabled draw_test_lib_app.cpp
     DEPS
         vizkit3d_debug_drawings
         draw_test_library_disabled
+    NOINSTALL
 )
 target_compile_features(draw_test_lib_disabled_app_disabled PRIVATE cxx_std_11)
 
@@ -79,6 +88,7 @@ rock_executable(draw_test_lib_enabled_app_disabled draw_test_lib_app.cpp
     DEPS
         vizkit3d_debug_drawings
         draw_test_library_enabled
+    NOINSTALL
 )
 target_compile_features(draw_test_lib_enabled_app_disabled PRIVATE cxx_std_11)
 
